# shipping_logistics

./: MANIFEST.in  README.md  license.txt  pyproject.toml  setup.py
shipping_logistics/: hooks.py  modules.txt
shipping_logistics/config/: desktop.py  docs.py
shipping_logistics/shipping_logistics/doctype/package_transport/: package_transport.js  package_transport.json  package_transport.py  test_package_transport.py
