[project]
name = "shipping_logistics"
authors = [
    { name = "Nathaniel", email = "admin@example.com"}
]
description = "Log transportation of packages handed off to shipping providers."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "shipping_logistics"
